2008-04-07  Johannes Schmid  <jhs@gnome.org>

	* plugins/symbol-db/symbol-db-engine.c (sdb_engine_cache_lookup),
	(sdb_engine_add_new_sym_kind), (sdb_engine_add_new_sym_access),
	(sdb_engine_add_new_sym_implementation):
	
	Fixed some issues with caching

2008-04-07  Johannes Schmid  <jhs@gnome.org>

	* plugins/symbol-db/plugin.c (on_single_file_scan_end),
	(on_importing_project_end), (project_root_added),
	(symbol_db_activate), (symbol_db_deactivate):
	* plugins/symbol-db/plugin.h:
	
	Give the symbol-db it's own progress bar because there are too many
	interactions with the global status bar.

2008-04-07  Johannes Schmid  <jhs@gnome.org>

	* plugins/symbol-db/symbol-db-view-locals.c
	(sdb_view_locals_create_new_store):
	* plugins/symbol-db/symbol-db-view-search.c (sdb_view_search_init):
	* plugins/symbol-db/symbol-db-view.c (sdb_view_create_new_store),
	(symbol_db_view_open):
	
	Sort symbol trees

2008-04-07  Johannes Schmid  <jhs@gnome.org>

	* plugins/sourceview/sourceview.c (idocument_cut),
	(idocument_copy), (idocument_paste):
	Block insert-text signal on cut/copy/paste

2008-04-07  Johannes Schmid  <jhs@gnome.org>

	* plugins/symbol-db/plugin.c (on_char_added),
	(on_single_file_scan_end):
	Only update buffer when a newline is inserted
	
	* plugins/symbol-db/symbol-db-engine.c (sdb_engine_clear_caches),
	(sdb_engine_get_tuple_id_by_unique_name),
	(sdb_engine_get_tuple_id_by_unique_name2),
	(sdb_engine_get_tuple_id_by_unique_name3),
	(sdb_engine_get_file_defined_id), (sdb_engine_populate_db_by_tags),
	(sdb_engine_finalize), (symbol_db_engine_db_exists),
	(symbol_db_engine_close_db), (symbol_db_engine_open_db),
	(sdb_engine_add_new_sym_type), (sdb_engine_add_new_symbol),
	Precompute file_defined_id to speed up population

2008-04-06  Johannes Schmid  <jhs@gnome.org>

	* libanjuta/anjuta-launcher.c (anjuta_launcher_scan_output),
	(anjuta_launcher_set_encoding):
	Fixed some problems with binary streams needed by symbol-db
	